--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SP Notification – Admin Panel</title>
+  <title>Siwan Police News – Admin Panel</title>
   <style>
     * {
       margin: 0;
